# streamly-lmdb

./: .gitignore  .hlint.yaml  .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.project  flake.nix  garnix.yaml  hie.yaml  package.yaml  stack.yaml  streamly-lmdb.cabal
.github/workflows/: ci.yaml  ci.yaml--
bench/: .gitignore  README.md  bench-lmdb-plain.hs  bench-lmdb-streamly.hs  bench-lmdb.c  bench.cabal  bench.hs  bench.sh  cabal.project  flake.nix  hie.yaml  package.yaml  stack.yaml
bench/results/: README.md  stdout.txt
bench/results/csv/: c-file-read.csv  memcpy-speed.csv  read-cursor.csv  write.csv
credits/: README.md  lmdb-0.2.5.txt
test/: ReadmeMain.hs  TestSuite.hs
