cabal-version:  3.0
name:           bench
version:        0.0.1
build-type:     Simple

executable bench
  main-is: bench.hs
  other-modules:
      Paths_bench
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , directory
    , statistics
    , streamly
    , streamly-core
    , streamly-lmdb
    , text
    , turtle
    , vector
  default-language: Haskell2010

executable bench-lmdb-plain
  main-is: bench-lmdb-plain.hs
  other-modules:
      Paths_bench
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , directory
    , statistics
    , streamly
    , streamly-lmdb
    , text
    , turtle
    , vector
  default-language: Haskell2010

executable bench-lmdb-streamly
  main-is: bench-lmdb-streamly.hs
  other-modules:
      Paths_bench
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , directory
    , statistics
    , streamly
    , streamly-core
    , streamly-lmdb
    , text
    , turtle
    , vector
  default-language: Haskell2010
